[gd_scene load_steps=26 format=3 uid="uid://dlslnn2dd886a"]

[ext_resource type="Material" uid="uid://bt3lvyqtd78u0" path="res://game/assets/shaders/ColorSwapMat.tres" id="1_saqvy"]
[ext_resource type="Script" uid="uid://b7fhdj087awib" path="res://game/fighter/projectiles/SubaruStarBallProjectilePlayer.gd" id="2_1icdc"]
[ext_resource type="Texture2D" uid="uid://cum5sq4kfqjkq" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0004.png" id="3_k3n5m"]
[ext_resource type="Texture2D" uid="uid://bndjufohjelm4" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0000.png" id="4_pufqo"]
[ext_resource type="Texture2D" uid="uid://dp77h0xq2abio" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0001.png" id="5_dbj55"]
[ext_resource type="Texture2D" uid="uid://oytar8fdp22b" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0002.png" id="6_ibhhy"]
[ext_resource type="Texture2D" uid="uid://crovt4brt3sjd" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0003.png" id="7_uhx73"]
[ext_resource type="Texture2D" uid="uid://be56h67pr7nsp" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0005.png" id="8_8qldh"]
[ext_resource type="Texture2D" uid="uid://dsxnlgf5s6528" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0006.png" id="9_toxda"]
[ext_resource type="Texture2D" uid="uid://dx24bf7lq5pqf" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0007.png" id="10_i0ve0"]
[ext_resource type="Texture2D" uid="uid://b5s8fnmoy3xo1" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0008.png" id="11_bggoj"]
[ext_resource type="Texture2D" uid="uid://dqsjauvsg8hj1" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0009.png" id="12_l7ipu"]
[ext_resource type="Texture2D" uid="uid://usbb47owea0w" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0010.png" id="13_vx61e"]
[ext_resource type="Texture2D" uid="uid://b3bgowmlq4xjb" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0011.png" id="14_y1box"]
[ext_resource type="Texture2D" uid="uid://dirmyxdf3crui" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0012.png" id="15_7fego"]
[ext_resource type="Texture2D" uid="uid://kfmph2dmyw6n" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0013.png" id="16_0ogyx"]
[ext_resource type="Texture2D" uid="uid://b2fgwbvw3jq5m" path="res://game/assets/sprites/VFX/Airdash/Timeline 1_0000.png" id="17_m5gkr"]
[ext_resource type="Script" uid="uid://dv11pt6y7wasy" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="18_intu1"]
[ext_resource type="PackedScene" uid="uid://bvgu0aev8rq4g" path="res://game/fighter/Hitbox.tscn" id="19_0v7ar"]
[ext_resource type="PackedScene" uid="uid://cwoqesvdf08m3" path="res://game/fighter/Hurtbox.tscn" id="20_dtl6t"]
[ext_resource type="Script" uid="uid://b010dt6v25trf" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="21_4cgrp"]

[sub_resource type="SGRectangleShape2D" id="1"]
extents_x = 4063232
extents_y = 8847360

[sub_resource type="Animation" id="2"]
resource_name = "Active"
length = 0.466668
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_pufqo"), ExtResource("5_dbj55"), ExtResource("6_ibhhy"), ExtResource("7_uhx73"), ExtResource("3_k3n5m"), ExtResource("8_8qldh"), ExtResource("9_toxda"), ExtResource("10_i0ve0"), ExtResource("11_bggoj"), ExtResource("12_l7ipu"), ExtResource("13_vx61e"), ExtResource("14_y1box"), ExtResource("15_7fego"), ExtResource("16_0ogyx")]
}

[sub_resource type="Animation" id="3"]
resource_name = "Destroy"
length = 0.333334
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_m5gkr")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u42dm"]
_data = {
&"Active": SubResource("2"),
&"Destroy": SubResource("3")
}

[node name="AssistSubaruStarBall" type="SGCharacterBody2D"]
material = ExtResource("1_saqvy")
script = ExtResource("2_1icdc")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_saqvy")
position = Vector2(80, -49)
scale = Vector2(1.7, 1.7)
texture = ExtResource("3_k3n5m")

[node name="Pushbox" type="SGCollisionShape2D" parent="."]
shape = SubResource("1")
disabled = true
fixed_position_x = 65536
fixed_position_y = 196608
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(1, 3)

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u42dm")
}
script = ExtResource("18_intu1")
auto_reset = false

[node name="Hitbox1" parent="." instance=ExtResource("19_0v7ar")]
fixed_position_x = 5177343
fixed_position_y = -3538944
fixed_scale_x = 500115
fixed_scale_y = 455660
position = Vector2(79, -54)
scale = Vector2(7.63115, 6.95282)

[node name="Hurtbox1" parent="." instance=ExtResource("20_dtl6t")]
fixed_position_x = 5242880
fixed_position_y = -3276800
fixed_scale_x = 517235
fixed_scale_y = 551400
position = Vector2(80, -50)
scale = Vector2(7.89238, 8.4137)

[node name="ExplosionTimer" type="Node" parent="."]
script = ExtResource("21_4cgrp")
wait_ticks = 60
