[gd_scene load_steps=26 format=3 uid="uid://c1srarhrdugwt"]

[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="1"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="2"]
[ext_resource type="Script" path="res://game/fighter/projectiles/SubaruStarBallProjectilePlayer.gd" id="3"]
[ext_resource type="PackedScene" path="res://game/fighter/Hurtbox.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://bndjufohjelm4" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0000.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b2fgwbvw3jq5m" path="res://game/assets/sprites/VFX/Airdash/Timeline 1_0000.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dp77h0xq2abio" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0001.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dsxnlgf5s6528" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0006.png" id="11"]
[ext_resource type="Texture2D" uid="uid://dx24bf7lq5pqf" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0007.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dqsjauvsg8hj1" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0009.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dirmyxdf3crui" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0012.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b5s8fnmoy3xo1" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0008.png" id="15"]
[ext_resource type="Texture2D" uid="uid://crovt4brt3sjd" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0003.png" id="16"]
[ext_resource type="Texture2D" uid="uid://oytar8fdp22b" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0002.png" id="17"]
[ext_resource type="Texture2D" uid="uid://be56h67pr7nsp" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0005.png" id="18"]
[ext_resource type="Texture2D" uid="uid://usbb47owea0w" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0010.png" id="19"]
[ext_resource type="Texture2D" uid="uid://b3bgowmlq4xjb" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0011.png" id="20"]
[ext_resource type="Texture2D" uid="uid://kfmph2dmyw6n" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0013.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cum5sq4kfqjkq" path="res://game/assets/sprites/subaru/StarBall/Timeline 1_0004.png" id="22"]
[ext_resource type="Material" path="res://game/assets/shaders/ColorSwapMat.tres" id="40"]
[ext_resource type="PackedScene" path="res://game/fighter/Hitbox.tscn" id="44"]

[sub_resource type="SGRectangleShape2D" id="1"]
extents_x = 4063232
extents_y = 8847360

[sub_resource type="Animation" id="2"]
resource_name = "Active"
length = 0.466668
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5"), ExtResource("10"), ExtResource("17"), ExtResource("16"), ExtResource("22"), ExtResource("18"), ExtResource("11"), ExtResource("12"), ExtResource("15"), ExtResource("13"), ExtResource("19"), ExtResource("20"), ExtResource("14"), ExtResource("21")]
}

[sub_resource type="Animation" id="3"]
resource_name = "Destroy"
length = 0.333334
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nbgyr"]
_data = {
"Active": SubResource("2"),
"Destroy": SubResource("3")
}

[node name="SubaruStarBall" type="SGCharacterBody2D"]
material = ExtResource("40")
script = ExtResource("3")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("40")
position = Vector2(80, -49)
scale = Vector2(2, 2)
texture = ExtResource("5")

[node name="Pushbox" type="SGCollisionShape2D" parent="."]
shape = SubResource("1")
disabled = true
fixed_position_x = 65536
fixed_position_y = 196608
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(1, 3)

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nbgyr")
}
script = ExtResource("2")
auto_reset = false

[node name="Hitbox1" parent="." instance=ExtResource("44")]
fixed_position_x = 5177343
fixed_position_y = -3538944
fixed_scale_x = 885578
fixed_scale_y = 846115
position = Vector2(79, -54)
scale = Vector2(13.5128, 12.9107)

[node name="Hurtbox1" parent="." instance=ExtResource("4")]
fixed_position_x = 5242880
fixed_position_y = -3276800
fixed_scale_x = 889958
fixed_scale_y = 892596
position = Vector2(80, -50)
scale = Vector2(13.5797, 13.6199)

[node name="ExplosionTimer" type="Node" parent="."]
script = ExtResource("1")
wait_ticks = 60
